# llm_data_query

./: .gitignore  LICENSE  README.md  pyproject.toml  redo_assistant.py
.chainlit/: config.toml
.files/12c810d3-4fac-483a-9d9f-3bec03f27b39/: 898f3d80-22a2-4486-8900-9f3557ebb839
.files/1faa2fdf-5a7c-4a52-9447-da77e958a658/: 7f15fcf9-c487-4d87-a9de-8443d5146f59  fba4a4e7-dc08-4404-bfb2-629ed63c4119
.files/331ce0d0-5571-4263-af93-dae1876614e5/: 434a1507-b8a0-426e-8f6e-4e6a001deab8
.files/3903d60f-e1f8-484c-927d-7b96e6302017/: e640a30e-2c4e-448e-b1da-8d87346baf39
.files/392f526d-c1b0-4a1d-a84f-2a01be041da0/: f7488274-a6ca-4c06-9494-2514339830b3
.files/4a1337aa-9543-485e-b521-2d6e77317e1f/: 0a190847-fa08-4d14-885c-861d96fec221
.files/52ba446e-1b5c-4147-b92e-d957cda0d4af/: 0fd72ca0-1634-4de4-9c2a-2de48d249c5b  3d3acc06-8a23-4d9b-ae5a-6ecdca58ed9f  d8b95e5f-c8e7-4612-ac68-1b829fc802d9
.files/5659270b-413c-46bf-93a9-5e9a8637a0c9/: ddb25392-ec73-49e9-ad36-15791d97ceb2
.files/5e786941-83cc-4389-be72-da83a46dc463/: 5b1dfbb4-2d48-4e57-8ff6-9611e59d1e2c
.files/7b0ca989-2a97-4039-96cf-fa72585e1330/: 4f4f736b-e932-4c02-86ae-4854e3253293  7485022d-c9be-45e9-a65a-9b1dbc3bd1d4  798cce80-8d12-460e-a346-891f726fc275  d6318c19-ba9d-4fc7-8527-7764fc03defe  f3e234a9-0164-4a86-b0f9-f94f610b9d24
data/: input_columns_description.xlsx  input_columns_description_current_commits.csv  input_columns_description_demographics.csv  input_columns_description_prior_commits.csv  penal_codes.csv  sample.md
models/: config.yaml  data_prep.py  eligibility.py  filters.py
(+17 files in other folders)
