[tool.poetry]
name = "redo-rules-code-generator"
version = "0.1.0"
description = ""
authors = ["Varunendra Singh <pratap.varu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
langchain = "^0.3.2"
langchain-community = "^0.3.1"
langchain-openai = "^0.2.1"
unstructured = "^0.15.13"
openpyxl = "^3.1.5"
loguru = "^0.7.2"
pandas = "^2.2.3"
chainlit = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
